--- a/src/components/ChatWindow/ChatWindow.module.css
+++ b/src/components/ChatWindow/ChatWindow.module.css
@@ -9,17 +9,56 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 59px;
+  height: 69px;
   background-color: #1F2C33;
   color: #fff;
 }
 
-.messages {}
+.messages {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 12px;
+  overflow-y: auto;
+  height: 100%;
+}
+
+.incomingMessage {
+  align-self: flex-start;
+  color: white;
+  margin-left: 63px;
+  margin-bottom: 8px;
+  padding: 7px 9px 7px 9px;
+  background-color: #1F2C33;
+  border-radius: 10px;
+  font-size: 14px;
+}
+
+.outgoingMessage {
+  align-self: flex-end;
+  color: white;
+  margin-right: 63px;
+  margin-bottom: 8px;
+  padding: 7px 9px 7px 9px;
+  background-color: #015C4B;
+  border-radius: 10px;
+  font-size: 14px;
+}
 
 .inputBlock {
+  display: flex;
   width: 100%;
 }
 
 .inputBlock input {
   width: 100%;
+}
+
+.empty {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  background-color: #212E35;
 }
