--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -29,35 +29,6 @@
   margin-bottom: 25px;
 }
 
-.input {
-  color: #333;
-  width: 100%;
-  height: 50px;
-  padding: 0 10px;
-  border-radius: 10px;
-  border: 1px solid #e6e6e6;
-  font-size: 16px;
-}
-
-.input:focus {
-  outline: none;
-}
-
-.input2 {
-  color: #333;
-  width: 100%;
-  height: 50px;
-  padding: 0 10px;
-  border-radius: 10px;
-  border: 1px solid #e6e6e6;
-  font-size: 16px;
-  margin-top: 10px;
-}
-
-.input2:focus {
-  outline: none;
-}
-
 .error {
   position: absolute;
   color: red;
@@ -66,7 +37,7 @@
   left: 2px;
 }
 
-.button {
+.startButton {
   width: 70%;
   height: 50px;
   border-radius: 10px;
