--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -20,6 +22,6 @@ li {
 }
 
 body {
+  font-family: 'Montserrat', sans-serif;
   background-color: #111B21;
-  /* margin: 0; */
 }
